<resources>
    <string name="app_name">Message</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chat">Chat</string>
    <string name="filters">FILTERS</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="ice_breakr">IceBreakr</string>
    <string name="slogan">Connect. Talk. Break Barrier</string>
    <string name="choose_one_of_the_options_below">Choose one of the options below:</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
</resources>