<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".HomeScreen"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/Homescreen_IceBreakr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:text="@string/ice_breakr"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Homescreen_welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="Welcome back, John!"
            android:textColor="@color/Homescreen_btn"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/Homescreen_userprofile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/Homescreen_btn"
            android:text="@string/user_profile"
            android:textColor="@drawable/button_text_color"
            android:layout_above="@+id/Homescreen_chat_btn" />


        <Button
            android:id="@+id/Homescreen_chat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/Homescreen_btn"
            android:text="@string/chat"
            android:textColor="@drawable/button_text_color"
            android:layout_above="@id/Homescreen_logout_btn"/>

        <Button
            android:id="@+id/Homescreen_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/Homescreen_btn"
            android:text="@string/logout"
            android:textColor="@drawable/button_text_color"
            android:layout_alignParentBottom="true"
            />


    </RelativeLayout>





</LinearLayout>